force-app/main/default/objects/Revenue_Contract_Activities__c/Revenue_Contract_Activities__c.object-meta.xml
<CustomObject>
    <label>Revenue Contract Activity</label>
    <nameField>
        <displayFormat>RCLA-{000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Contract Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>