force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>