force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Allocation_Method__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Method__c</fullName>
    <label>Allocation Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>