force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Amount_Transactional__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transactional__c</fullName>
    <label>Transactional Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>