force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Bill_Financial_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_Financial_Id__c</fullName>
    <label>Bill Financial Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>