force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Carves_Liability_Account__c.field-meta.xml
<CustomField>
    <fullName>Carves_Liability_Account__c</fullName>
    <label>Carves Liability Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>