force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Contractual_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Revenue_Account__c</fullName>
    <label>Contractual Revenue Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>