force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Cost_Action__c.field-meta.xml
<CustomField>
    <fullName>Cost_Action__c</fullName>
    <label>Cost Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>