force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Cumulative_Release_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Release_Amount__c</fullName>
    <label>Cumulative Release Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>