force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Deferred_Cost_Account__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Cost_Account__c</fullName>
    <label>Deferred Cost Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>