force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Distribution_Date_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date_Method__c</fullName>
    <label>Prior Period Revenue Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>