force-app/main/default/objects/Revenue_Contract_Activities__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>