force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Formula_Expression__c.field-meta.xml
<CustomField>
    <fullName>Formula_Expression__c</fullName>
    <label>Formula Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>