force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Formula_Value__c.field-meta.xml
<CustomField>
    <fullName>Formula_Value__c</fullName>
    <label>Formula Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>