force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Order_Financial_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Financial_Id__c</fullName>
    <label>Order Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>