force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>