force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Prorate_Method__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Method__c</fullName>
    <label>Partial Revenue Start and End Dates</label>
    <length>50</length>
    <type>Text</type>
</CustomField>