force-app/main/default/objects/Revenue_Contract_Activities__c/fields/RCL_Id__c.field-meta.xml
<CustomField>
    <fullName>RCL_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCL Id</label>
    <referenceTo>Revenue_Contract_Line__c</referenceTo>
    <relationshipLabel>Revenue Contract Activities</relationshipLabel>
    <relationshipName>Revenue_Contract_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>