force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Recognized_Cost_Account__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Cost_Account__c</fullName>
    <label>Recognized Cost Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>