force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Release_Activity_Guid__c.field-meta.xml
<CustomField>
    <fullName>Release_Activity_Guid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Release Activity Guid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>