force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Reporting_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Exchange_Rate__c</fullName>
    <label>Reporting Exchange Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>