force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Revenue_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Id__c</fullName>
    <label>Revenue Contract Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>