force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Reversal__c.field-meta.xml
<CustomField>
    <fullName>Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversal Flag</label>
    <type>Checkbox</type>
</CustomField>