force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>