force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>