force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Transaction_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency_Code__c</fullName>
    <label>Transaction Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>