force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Triggered_Period__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Period__c</fullName>
    <label>Trigger Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>