force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Triggered_Type__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Type__c</fullName>
    <label>Revenue Trigger</label>
    <length>50</length>
    <type>Text</type>
</CustomField>