force-app/main/default/objects/Revenue_Contract_Activities__c/fields/Usage_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Usage_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage Booking Flag</label>
    <type>Checkbox</type>
</CustomField>